# nagi

./: README.ja.md  README.md  main.py  package.json  publish.sh  pyproject.toml  wget-log  yes  yes.pub
python/: main.py
python/templates/: index.html
scripts/: check-version.sh
templates/: index.html
